1.0.3 - Fix bug with /api end point not returning any values
1.0.2 - Add default config writing, so you can start with a naked jar and it will set itself up
1.0.1 - Roll up all the Lib dependencies into single jar, so now just download jar file and no need to do full git clone
1.0.0 - Initial release