@@ -161,6 +161,7 @@ public class JsonWrapper {
     activeModules.add("com.groupon.KillAllChrome");
     activeModules.add("com.groupon.GetProcesses");
     activeModules.add("com.groupon.KillPid");
+    activeModules.add("com.groupon.Netstat");
     activeModules.add("com.groupon.Screenshot");
     activeModules.add("com.groupon.ExposeDirectory");
     activeModules.add("com.groupon.GetFile");
